tests/execution_spec/snapshots/execution_spec__test-ref-other.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type InPost {
  get: [Post] @http(path: "/posts")
}

type Post {
  id: Int!
  userId: Int!
}

type Query {
  posts: InPost
}
