tests/execution_spec/snapshots/execution_spec__test-server-vars.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(vars: [{key: "foo", value: "bar"}]) @upstream(baseURL: "http://jsonplacheholder.typicode.com") {
  query: Query
}

type Query {
  foo: String @http(path: "/foo")
}
